# pyevelib

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
evelib/: __init__.py  api.py  constants.py  enums.py  errors.py  esi.py  eve_manager.py  eve_objects.py  oauth.py  objects.py  sde.py  utils.py  yaml_workaround.py
evelib/esi/: __init__.py  async_esi_manager.py  esi_objects.py
evelib/planet/schematics/: schematic_manager.py
evelib/types/: __init__.py  type_data.py  type_manager.py
evelib/types/categories/: __init__.py  category_manager.py
evelib/types/groups/: __init__.py  group_manager.py
evelib/universe/: __init__.py  universe_data.py  universe_manager.py
tests/: test_1_esi.py  test_2_sde.py  test_3_api.py  utils.py
