[project]
name = "pyevelib"
version = "0.0.1"
authors = [
    { name="Alex Schoenhofen", email="alexanderschoenhofen@gmail.com" },
]
description = "An Asyncio library to read ESI and the SDE."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evelib"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

